--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ arrow = "1.2.4"
 compose-plugin = "1.6.2"
 kotlin = "2.0.10"
 kotlinx-coroutines-core = "1.8.1"
+kotlinx-io-core = "0.5.4"
 kotlinx-serialization-core = "1.6.3"
 kotlin-wrapper-js = "1.0.0-pre.828"
 kotlin-wrapper-react = "18.2.0-pre.733"
@@ -17,6 +18,7 @@ arrow-fx-coroutines = { module = "io.arrow-kt:arrow-fx-coroutines", version.ref 
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines-core" }
+kotlinx-io-core = { module = "org.jetbrains.kotlinx:kotlinx-io-core", version.ref = "kotlinx-io-core"}
 kotlinx-serialization-core = { module = "org.jetbrains.kotlinx:kotlinx-serialization-core", version.ref = "kotlinx-serialization-core" }
 
 clikt = { module = "com.github.ajalt.clikt:clikt", version.ref = "clikt" }
